# diffvg-triton

./: .gitignore  README.md  __init__.py  autograd.py  pyproject.toml  render.py  scene.py  setup.py
diffvg_triton/: __init__.py  io.py  render.py  render_batch.py  render_pytorch.py  svg.py
diffvg_triton/kernels/: __init__.py  boundary.py  composite.py  rng.py  solve.py  winding.py
examples/: mnist_vae.py  refine_svg.py  train_vae_comparison.py  vqvae_train.py
kernels/: distance.py  filter.py
tests/: __init__.py  debug_open_stroke.py  debug_stroke_render.py  debug_winding.py  end_to_end_parity.py  mnist_parity_test_triton.py  render_comparison.py  render_diagnostic_triton.py  test_kernels.py  test_render.py
tests/benchmarking/: benchmark.py
tests/parity/: compare_parity_results.py  cross_validation.py  debug_winding_diff.py  diagnose_parity.py  minimal_grad_comparison.py  step_by_step_comparison.py  test_kernels.py  test_parity.py  test_render.py  vae_parity_test.py  vae_single_batch_test.py  vae_single_step.py  visual_compare.py
